<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Start/Stop Indicator -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/startstatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/server_status"
                android:textSize="18sp" />
        </LinearLayout>
        <!-- end Start/Stop Indicator -->
        <!-- start/stop button with three images -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="myPhone"
                android:src="@drawable/nexus"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/progrleft"
               	android:minWidth="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="PROGRESS"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/Orb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="Orb"
                android:src="@drawable/ic_launcher"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/progrright"
                android:minWidth="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="Progress"
                tools:ignore="HardcodedText" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="receiverPhone"
                android:src="@drawable/nexus"
                tools:ignore="HardcodedText" />
        </LinearLayout>
        <!-- end three images with start button -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:alpha="0.4"
            android:background="#333333" />
        <!-- three toggles for three modes -->

        <TextView
            android:id="@+id/modestatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/current_Mode" />

        <LinearLayout
            android:id="@+id/connectiontogglesLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="visible" >

            <ImageButton
                android:id="@+id/wifihotspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="hotspotToggle"
                android:src="@drawable/hotspot"
                android:hapticFeedbackEnabled="true"
                tools:ignore="HardcodedText"
                 />

            <ImageButton
                android:id="@+id/wifinetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="wifiToggle"
                android:src="@drawable/wifi"
                android:hapticFeedbackEnabled="true"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/dataconnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="dataToggle"
                android:src="@drawable/data"
				android:hapticFeedbackEnabled="true"
                tools:ignore="HardcodedText" />

        </LinearLayout>
        <!-- end of three toggles for three modes -->
        <!-- Transfer Status -->

        <LinearLayout
            android:id="@+id/transferStatusLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <!-- speed -->

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    tools:ignore="UselessParent" >

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speednumber"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" KB/s"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />

                </TableRow>
            </TableLayout>
            <!-- end speed -->
            <!-- filename -->

            <TextView
                android:id="@+id/currentfilename"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/currentFileName" />

            <!-- end Filename -->
            <!-- Progress -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="50dp"
                    android:text="@string/TransferPercent" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:progress="50" />
                </LinearLayout>
            </LinearLayout>
            <!-- end progress -->
        </LinearLayout>
        <!-- end Transfer Status -->

  <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:alpha="0.4"
            android:background="#333333" />

        <!-- space for ip address -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ipaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/ipaddress"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:alpha="0.5"
                android:background="#555555" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="share"
                android:src="@drawable/ic_action_share"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="QR Code"
                tools:ignore="HardcodedText" />

        </LinearLayout>
        <!-- end for space of ipaddress -->
        <!-- ==================================================================== -->
        <!-- 2nd Part of the Page -->


        <!-- end of Second Page -->
    </LinearLayout>

</ScrollView>